# anondb

./: .gitignore  Cargo.toml  README.md  gpx_loader.md  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.circleci/: config.yml
anondb/: Cargo.toml
anondb-kv/: Cargo.toml  README.md
anondb-kv/src/: kv_redb.rs  lexicographic.rs  lib.rs  sort.rs
anondb-kv/src/kv_redb/: iter.rs  maybe.rs  mod.rs  tx.rs
anondb-kv/src/lexicographic/: key.rs  mod.rs  serialize.rs
anondb-kv/src/test/: clear.rs  empty.rs  insert.rs  mod.rs  range.rs  remove.rs  transaction.rs
anondb-macros/: Cargo.toml
anondb-macros/src/: anondb.rs  document.rs  index.rs  lib.rs
anondb/src/: collection.rs  index.rs  lib.rs  metadata.rs  query.rs  test.rs
anondb/src/test/: insert.rs  misc.rs  mod.rs  primary_key.rs  range.rs  unique_index.rs
book/: book.toml
book/src/: README.md  SUMMARY.md
book/src/architecture/: README.md  collections.md  database.md
domacro/: Cargo.toml  README.md
domacro/src/: lib.rs
examples/: schema.types.ts
scripts/: generateTypes.ts  package.js  test.sh  uploadCoverage.js
src/: active_transaction.rs  block-cache.ts  bytes.rs  collection.rs  index.rs  index.ts  journal.rs  kv.rs  kv_redb.rs  lib.rs  multimap_table.rs  query.rs  schema.ts  table.rs  test.rs  transaction.rs  types.ts  web.ts
src/connectors/: indexed-db.ts  memory.ts  postgres.ts  sqlite-memory.ts  sqlite.ts
src/helpers/: callbacks.ts  memory.ts  shared.ts  sql.ts
tests/: indexed-db.test.ts  memory.test.ts  postgres.test.ts  sqlite-memory.test.ts  sqlite.test.ts  test-schema.ts
tests/database/: create.ts  delete.ts  find.ts  transaction.ts  update.ts
