[package]
name = "anondb"
version = "0.1.0"
edition = "2024"

[lib]

[features]
default = ["redb"]
redb = ["dep:redb"]

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.99"
serde_bytes = "0.11.17"
byteorder = "1"
log = "0.4.28"

rmp = "0.8.14"
rmp-serde = "1.3.0"
rmpv = "1"

redb = { version = "2.6.3", optional = true }
