[package]
name = "anondb-kv"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "anondb kv traits and backend implementations"
repository = "https://github.com/chancehudson/anondb.git"

[lib]

[features]
default = ["redb"]
redb = ["dep:redb"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
log = { workspace = true }

redb = { version = "2.6.3", optional = true }

[dev-dependencies]
rand = { workspace = true }
rstest = "0"
paste = "1"
domacro = "0"
