[package]
name = "anondb"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Database abstraction over a generic KV"
repository = "https://github.com/chancehudson/anondb.git"

[lib]

[dependencies]
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }

serde_bytes = "0.11.17"
rmp = "0.8.14"
rmp-serde = "1.3.0"
rmpv = "1"

anyhow = { workspace = true }
anondb-kv = { workspace = true }
anondb-macros = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
